--- a/app/src/main/res/layout/admcontrol_accounting.xml
+++ b/app/src/main/res/layout/admcontrol_accounting.xml
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/orderHistoryGraphTypeChoiceDesc"
-            android:text="Build a graph. " />
+            android:text="Build a graph."
+            android:layout_marginBottom="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
